use vim as git editor

--- a/.gitconfig
+++ b/.gitconfig
@@ -30,3 +30,8 @@ b = branch
 
 [format]
     pretty=format:%C(yellow)%h%Creset -%C(red)%d%Creset %s %Cgreen(%ar) %C(bold blue)<%an>%Creset
+
+[merge]
+    tool = vimdiff
+[core]
+	editor = vim
